Fix Guild Layout Spacing

--- a/website/src/components/guild.css
+++ b/website/src/components/guild.css
@@ -1,3 +1,4 @@
 .guild {
   display: flex;
+  height: calc(100vh - 48px);
 }
